Added first section in chapter 4

--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -413,6 +413,12 @@ Vid specificering av data som skulle ingå i ett UI-element gjordes automatiska 
 
 \chapter{Resultat}
 
+I det här kapitlet kommer designprocessen vid användning av Kibana samt tillämpningen av den att förklaras. Även en utvärdering av den framtagna designprocessen presenteras i detta kapitel. 
+
+\section{UX-Designprocess vid användning av Kibana}
+
+UX-designprocessen som togs fram under detta projekt följde stegen i Figur 4.1. Målet med varje iterering var att förbättra produkten och komma närmare kundens krav. Itereringen upprepades tills dess att kunden accepterade produkten. Observation och idéskapande följde den traditionella designprocessen medan produktskapande och testning fick en ny betydelse. Stegen är beskrivna nedan:
+
 \begin{figure}[h]
 
 \centering
@@ -450,10 +456,10 @@ Hur många fordon som passerade den senaste minuten? &Antal fordon
   &Trafikintensitet baserad på fordonstyp för de mest populära betalstationerna 
  & Stapeldiagram  & TidsStämpel, Betalstation, Fordonstyp\\ \hline
 
-
 \end{tabular}
 \end{center}
 \end{table}
+
 
 \chapter{Analys och diskussion}
 Analys och diskussion
